# cutout

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  cutout.agent-capabilities.json  index.html  lingui.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.trellis/: .template-hashes.json  config.yaml  workflow.md
brand/: AGENTS.md  LICENSES.md  README.md  brand-asset-manifest.json
docs/: AGENT_INTEGRATION.md  AI_NATIVE.md  CODEX_PLUGIN.md  CODE_SIGNING_POLICY.md  COMPETITIVE_DEVUX_GAP_MATRIX.md  COMPETITIVE_PRODUCT_GAP_MATRIX.md  HEADLESS_AGENT_CONTROL.md  INTEGRATION_CAPABILITY_MATRIX.md  INTEGRATION_RELEASE_CHECKLIST.md  INTEGRATION_SDK.md  PRIVACY_DATA_LIFECYCLE.md  PRODUCTION_PROVIDER_POLICY.md  RELEASE_BASELINE.md  RELEASE_CHECKLIST.md  RELEASE_COMMIT_PLAN.md  ROADMAP.md  SPEECH_ROADMAP.md
integrations/: process-surfaces.json
schemas/: cutout.agent-capabilities.schema.json
scripts/: app-icon-compose.swift  brand-assets.mjs  build-codex-plugin.mjs  check-frontend-bundle.mjs  ci-platform-contracts.test.ts  ci-workflow.test.ts  codex-plugin.test.ts  collect-release-assets.mjs  collect-release-assets.test.ts  cutout-adapters.test.ts  cutout-ai-manual-params.test.ts  cutout-ai.mjs  cutout-headless.mjs  (+37 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/permissions/: application.toml  updater.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent_host.rs  ai_native.rs  foreground_segmentation.rs  git.rs  mod.rs  native_approval.rs  registry_desktop.rs  save_assets.rs  save_bundle.rs  scan_repository.rs  secret_store.rs  speech.rs  updater.rs  vectorize.rs  workspace_bridge.rs
src-tauri/src/commands/ai/: ai_proxy.rs  auth_header.rs  image_edit.rs  keys.rs  mod.rs  provider_discovery.rs  providers.rs
(+1298 files in other folders)
