[package]
name = "app"
version = "0.1.0"
description = "Local-first AI design production workspace"
authors = ["Nebutra AI Native Team"]
license = "Apache-2.0"
repository = "https://github.com/nebutra/cutout"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "sync", "time"] }
base64 = "0.22"
sha2 = "0.10"
libc = "0.2"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart", "macos-system-configuration"] }
futures-util = "0.3"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
image = "0.23.10"
vtracer = "0.6.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

# Real OS keychain backends per platform (without a backend feature, keyring 3.x
# falls back to a process-local mock that does NOT persist across restarts).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
security-framework = "3"
security-framework-sys = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
